--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,43 +1,15 @@
-# Ruby CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-ruby/ for more details
-#
-version: 2
+version: 2.1
+orbs:
+  ruby: circleci/ruby@0.1.2 
+
 jobs:
   build:
     docker:
-      # specify the version you desire here
-       - image: circleci/ruby:2.4.2
-
-    working_directory: ~/repo
-
+      - image: circleci/ruby:2.6.3-stretch-node
+    executor: ruby/default
     steps:
       - checkout
-
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "Gemfile" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
       - run:
-          name: install dependencies
-          command: bundle check || bundle install --jobs=4 --retry=3 --path vendor/bundle
-
-      - save_cache:
-          paths:
-            - ./vendor
-          key: v1-dependencies-{{ checksum "Gemfile" }}
-
-      # run tests!
-      - run:
-          name: run tests
-          command: bundle exec rake
-
-      # collect reports
-      - store_test_results:
-          path: ~/repo/test-results
-      - store_artifacts:
-          path: ~/repo/test-results
-          destination: test-results
+          name: Which bundler?
+          command: bundle -v
+      - ruby/bundle-install
